Updated colors in base skin to fix background/foreground color contrast

--- a/source/_sass/component/_navbar.scss
+++ b/source/_sass/component/_navbar.scss
@@ -1,3 +1,6 @@
+/* Color used on hover/active in navbarUpdated */
+$navbar-highlight-color: darken($navbar-background-color, 30%);
+
 .navbar
 {
     display: flex;
@@ -86,7 +89,7 @@
         position: relative;
         min-width: 4rem;
         margin: auto 0;
-        // border: 0.1rem solid darken($navbar-background-color, 10%);
+        // border: 0.1rem solid $navbar-highlight-color;
         &:not(:last-child)
         {
             border-right: none;
@@ -107,7 +110,7 @@
         color: $navbar-foreground-color;
         &:hover
         {
-            background-color: darken($navbar-background-color, 10%);
+            background-color: $navbar-highlight-color;
             .navbar-dropdown-menu
             {
                 display: flex;
@@ -128,7 +131,7 @@
     }
     .active
     {
-        background-color: darken($navbar-background-color, 10%);
+        background-color: darken($navbar-background-color, 30%);
     }
     @include until($navbar-visible-screen)
     {
@@ -151,7 +154,7 @@
     padding-top: 0.5rem;
     li
     {
-        background-color: darken($navbar-background-color, 10%);
+        background-color: $navbar-highlight-color;
         width: 8rem;
         margin: 0;
         &:hover
@@ -170,7 +173,7 @@
         top: 0;
         border-width: 0 8px 8px 8px;
         border-style: solid;
-        border-color: darken($navbar-background-color, 10%) transparent;
+        border-color: $navbar-highlight-color transparent;
     }
 }
 
