--- a/source/_sass/skin/_base-01.scss
+++ b/source/_sass/skin/_base-01.scss
@@ -1,7 +1,7 @@
 /* Reference URL: https://material.io/design/color/the-color-system.html#color-theme-creation */
 /* Color palette */
 /* Primary Color */
-$primary-background-color          : hsl(202, 98%, 37%);
+$primary-background-color          : hsl(227,67%,45%);// hsl(202, 98%, 37%);
 $primary-background-color-light    : lighten($primary-background-color, 10%);
 $primary-background-color-dark     : darken($primary-background-color, 10%);
 /* "On" colors */
